--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://190.0.1.88:3306/hello_test?useUnicode=true
+    url: jdbc:mysql://127.0.0.1:3306/cron_job?useUnicode=true
     username: root
-    password: root
+    password: 123456
     driver-class-name: com.mysql.jdbc.Driver
     
 mybatis: 
-  mapper-locations:
-  - classpath:com/example/demo/mapper/*.xml
-  type-aliases-package: com.example.demo.entity
+  mapper-locations: classpath:com/lxl/quartz/mapper/*.xml
+  type-aliases-package: com.lxl.quartz.entity
     
